<resources>
    <string name="app_name">Cibertec App</string>
    <!-- LOGIN -->
    <string name="login_button">Iniciar Sesion</string>
    <string name="login_lbl_title">Inicio de Sesion</string>
    <string name="login_lbl_usuario">Usuario</string>
    <string name="login_lbl_contraseña">Contraseña</string>
    <string name="login_btn_iniciar">Iniciar Sesion</string>
    <string name="login_lbl_registrar">Registrarse</string>

    <!-- MENU -->
    <string name="menu_text">Menu Principal</string>

    <!-- REGISTER -->
    <string name="title_activity_registrar">Registrar Nuevo Usuario</string>
    <string name="register_lbl_id">Identificador</string>
    <string name="register_lbl_usuario">Usuario</string>
    <string name="register_lbl_contraseña">Contraseña</string>
    <string name="register_lbl_nombre">Nombres</string>
    <string name="register_lbl_apellidos">Apellidos</string>
    <string name="register_lbl_sexo">Sexo</string>
    <string-array name="register_array_sexo">
        <item value="1">Masculino</item>
        <item value="2">Femenino</item>
    </string-array>

    <!-- MENU DESIGN -->
    <string name="home_item">Inicio</string>
    <string name="usuarios_item">Usuarios</string>
    <string name="compras_item">Carrito</string>
    <string name="ordenes_item">Ordenes</string>
    <string name="facturas_item">Facturas</string>
    <string name="log_out_item">Cerrar Sesión</string>
    <string name="configuracion_item">Configuración</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--LISTADO DE USUARIOS-->
    <string name="usuarios_activity_title">Administración de Usuarios</string>
    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_delete">Eliminar</string>
    <string name="search_text">Buscar por nombre o apellido</string>

    <!--SLIDER-->
    <string name="title_activity_welcome">Pantalla Inicial</string>
    <string name="next">SIGUIENTE</string>
    <string name="skip">SALTAR</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <string name="google_maps_key">AIzaSyAe7tE9nxpJPy4pKBqaBYD3SWki7ViA4qk</string>
    <string name="login_lbl_recordar">Recordar Usuario</string>


    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Inicio</string>
    <string name="nav_pokedex">Pokedex Retrofit</string>
    <string name="nav_movies">Videos</string>
    <string name="nav_notifications">Notificaciones</string>
    <string name="nav_settings">Configuración</string>
    <string name="nav_others">Otras opciones</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Inicio</item>
        <item>Pokedex</item>
        <item>Videos</item>
        <item>Notificaciones</item>
        <item>Configuración</item>
    </string-array>

    <string name="activity_title_user_admin">Administración de Usuarios</string>
    <string name="activity_title_about_us">Acerca de</string>
    <string name="action_logout">Cerrar Sesion</string>
    <!--<string name="action_clear_all">Limpiar todo</string>
    <string name="action_mark_all_read">Marcar todo como leido</string>-->

    <string name="openDrawer">Abrir Menu</string>
    <string name="closeDrawer">Cerrar Menu</string>
    <string name="menu_title">Aplicación Movil</string>

    <!--POKEDEX-->
    <string name="pokedex_title">Pokedex con Retrofit</string>
    <string name="permisos_texto">Para el correcto funcionamiento de la aplicación, usted necesita proporcionar permisos para los siguientes accesos:</string>
    <string name="permiso_boton">Conceder Permisos</string>
</resources>
