<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/login_lyt_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:theme="@style/themeNoAction"
    tools:context="com.example.salomon.aplicacionmovil.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            app:srcCompat="@drawable/ubica" />

        <TextView
            android:id="@+id/loginLblUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif"
            android:textStyle="bold"
            android:textColor="@color/primary_dark"
            android:textAlignment="center"
            android:text="@string/login_lbl_title"
            android:textAllCaps="false"
            android:textSize="30dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_account_box_black_48dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_lyt_usuario"
                android:layout_width="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">
                <EditText
                    android:id="@+id/login_txt_usuario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lines="1"
                    android:hint="@string/login_lbl_usuario"
                    android:inputType="textPersonName" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:background="@drawable/ic_pass_black_24dp" />

            <android.support.design.widget.TextInputLayout
                android:id="@+id/login_lyt_password"
                android:layout_width="match_parent"
                app:passwordToggleEnabled="true"
                android:layout_marginLeft="10dp"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/login_txt_password"
                    android:inputType="numberPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/login_lbl_contraseña"
                    android:lines="1" />
            </android.support.design.widget.TextInputLayout>

        </LinearLayout>
        <LinearLayout
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/chkRecordar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/login_lbl_recordar"
                android:theme="@style/CheckboxMaterial" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="vertical">

        <Button
            android:id="@+id/login_btn_inicio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:theme="@style/PrimaryButton"
            android:text="@string/login_btn_iniciar" />

        <TextView
            android:id="@+id/login_lbl_registrar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:paddingTop="10dp"
            android:textSize="17dp"
            android:textColor="@drawable/selector_link"
            android:fontFamily="sans-serif"
            android:text="@string/login_lbl_registrar" />

    </LinearLayout>

</LinearLayout>
